--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   firebase_core: ^2.3.0
   firebase_auth: ^4.2.2
+  google_sign_in: ^6.1.0
 
 
 # For information on the generic Dart part of this file, see the
