--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dev_dependencies:
   firebase_core: ^2.3.0
   firebase_auth: ^4.2.2
   google_sign_in: ^6.1.0
+  carousel_slider: ^4.2.0
 
 
 # For information on the generic Dart part of this file, see the
