--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dev_dependencies:
   firebase_auth: ^4.2.2
   google_sign_in: ^6.1.0
   carousel_slider: ^4.2.0
+  http: ^0.13.3
 
 
 # For information on the generic Dart part of this file, see the
